Chat and character service integration

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,22 +1,24 @@
-<footer class="container py-5">
+<footer class="row py-5 shadow-lg darker">
   <div class="row justify-content-center text-center">
     <div class="col-12 col-sm">
       <img src="/assets/logos/WhiteLogo.svg" class="footer-logo" />
-      <small class="d-block mb-3 text-muted">&copy; 2021-2022</small>
+      <small class="d-block mb-3 text-muted">&copy; 2020-2023</small>
     </div>
     <div class="col-12 col-sm">
       <h5>Quick Links</h5>
       <ul class="list-unstyled text-small">
         <li><a class="text-muted" href="/">Home</a></li>
-        <li><a *ngIf="!isUserSignedIn()" class="text-muted" routerLink="login">Login</a></li>
-        <li><a *ngIf="isUserSignedIn()" class="text-muted" (click)="userProfile()">Profile</a>
+        <li><a *ngIf="!isUserSignedIn()" class="text-muted" style="cursor: pointer"
+            (click)="this.keycloak.login()">Login</a></li>
+        <li><a *ngIf="isUserSignedIn()" class="text-muted"
+            [routerLink]="['/users', this.keycloak.profile?.username]">Profile</a>
         </li>
       </ul>
     </div>
     <div class="col-12 col-sm" *ngIf="isAdmin()">
       <h5>Admin Quick Links</h5>
       <ul class="list-unstyled text-small">
-        <li><a class="text-muted" routerLink="admin">Dashboard</a></li>
+        <li><a class="text-muted" [routerLink]="['/admin']">Dashboard</a></li>
       </ul>
     </div>
     <!--    <div class="col-6 col-md">-->
