Updated download url

--- a/src/app/pages/chat/view-chat-channel/view-chat-channel.component.html
+++ b/src/app/pages/chat/view-chat-channel/view-chat-channel.component.html
@@ -4,7 +4,7 @@
       Chat Channel
     </h4>
     <h2 class="col-12 text-center">
-      {{ chatChannel?.name }}
+      {{ chatChannel?.name }} <span class="badge rounded-pill badge-primary small">{{ chatChannel?.dimension }}</span>
     </h2>
     <div class="col-12">
       <div class="card">
