--- a/src/app/components/modal-select/modal-select.component.html
+++ b/src/app/components/modal-select/modal-select.component.html
@@ -1,18 +1,13 @@
 <div class="modal-header">
   <h5 class="modal-title" id="exampleModalLabel">{{ title }}</h5>
-  <button
-    type="button"
-    class="btn-close"
-    aria-label="Close"
-    (click)="modalRef.close()"
-  ></button>
+  <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
 </div>
 <div class="modal-body">
   {{ message }}
   <mdb-form-control>
     <mdb-select [multiple]="true" [filter]="true" [(ngModel)]="selectedOptions">
-      <mdb-option *ngFor="let role of options | filterFrom : ignoreOptions " [value]="role">
-        {{ role.name }}
+      <mdb-option *ngFor="let option of options | filterFrom : ignoreOptions " [value]="option">
+        {{ getDisplayName(option) }}
       </mdb-option>
     </mdb-select>
   </mdb-form-control>
@@ -21,7 +16,7 @@
   <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
     Cancel
   </button>
-  <button type="button" class="btn btn-primary" (click)="closeWithRoles()">
+  <button type="button" class="btn btn-primary" (click)="closeWithSelection()">
     Save Changes
   </button>
 </div>
