--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,9 @@ html,body
 .text-darker {
   color: rgba(0, 0, 0, 0.1);
 }
+@import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '@fortawesome/fontawesome-free/scss/solid.scss';
+@import '@fortawesome/fontawesome-free/scss/regular.scss';
+@import '@fortawesome/fontawesome-free/scss/brands.scss';
+ 
+@import 'mdb-angular-ui-kit/assets/scss/mdb.scss';
